fix: overflow content on mapcards removed

--- a/my-app/src/Components/SubComponents/Bunkmates/GroupMapCard.css
+++ b/my-app/src/Components/SubComponents/Bunkmates/GroupMapCard.css
@@ -6,8 +6,7 @@
 .gm-style-iw-d {
     background-color: transparent !important;
     box-shadow: none !important;
-    padding-right: none !important;
-    padding-bottom: none !important;
+    overflow: hidden !important;
 
 }
 
